--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <!-- App -->
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="text/javascript"  src="CameraApp.js"></script>
     <script type="text/javascript" src="index.js"></script>    
+    
 
     <!-- Layouts -->
     <!--<!--NavBar-->
